--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,7 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  <script src="../JSUtils.min.js"></script>
   <script src="../vendor/qunit-1.12.0.js"></script>
   <script src="../test/tests.js"></script>
 </body>
