--- a/test/test-debug.html
+++ b/test/test-debug.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JSUtils tests</title>
+  <title>jUtils tests</title>
   <link rel="stylesheet" href="../vendor/qunit-1.13.0.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../JSUtils.js"></script>
+  <script src="../jUtils.js"></script>
   <script src="../vendor/qunit-1.13.0.js"></script>
   <script src="../test/tests.js"></script>
 </body>
